8241556: Memory leak if -XX:CompileCommand is set

Reviewed-by: rasbold, thartmann, neliasso